fix: update approach in beam_search_prune configuration file to beam_search_prune

--- a/recipes/Llama-3.2-1B-Instruct/beam_search_prune.yaml
+++ b/recipes/Llama-3.2-1B-Instruct/beam_search_prune.yaml
@@ -1,7 +1,7 @@
 # refer to src/sal/config.py for more options
 
 filter_duplicates: true
-approach: beam_search
+approach: beam_search_prune
 n: 4
 search_batch_size: 1  # DO NOT CHANGE!
 num_samples: 10       # REMOVE THIS LINE TO RUN ON THE WHOLE DATASET
